--- a/client/angular.json
+++ b/client/angular.json
@@ -63,8 +63,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "client:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "client:build"
           },
           "configurations": {
             "production": {
