--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/rest_api_test
 spring.datasource.username=test
 spring.datasource.password=123
+server.port=8181
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
